# st-missing-fill

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  config.yaml  main.py  pyproject.toml  run_experiments.sh  tools_update_ipynb.py
data/processed/: all_stations.csv
docs/: 1 硕士论文.docx  MISSING_PATTERN_USAGE.md  mymodel.md  references.bib  temp_thesis.md  ~$论文稿.docx  临时论文稿.docx  工作成果总结.md  文献标注说明.md  文献版示例.md  绪论优化建议.md  论文稿.docx  论文稿—向凌霄.docx  论文稿模板副本.docx
docs/body/: 4-34.docx  chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  hpo_parameters.csv  hpo_parameters.md  hpo_parameters.xlsx  symbols_list.md
docs/papers/: paper1_clean.txt  paper1_extracted.txt
docs/tmp_ideas/: chapter2.md  chapter3.md  chapter4.md  chapter4_modeling.md  final.md  new.md  new2.md  new3.md  new4.md  new5.md  paper1.md  symbols_list.md
docs/大论文备份/: 1 硕士论文（20260309-222900）.docx
logs/xlx/: config.json  improvement_report.md  metrics.json  summary.csv
notebooks/: geo_analysis.ipynb  tmp.ipynb
scripts/: build_chapters_docx.py  calculate_improvement_rate.py  convert_chapters_md_to_docx.py  csv_to_xlsx.py  example_missing_patterns.py  merge_and_plot_all_parts.py  plot_baseline_compare.py  plot_kde_results.py  run_all_baselines_3x4.sh  run_plot_3_missing_pattern.py  run_plot_missing_pattern.py  run_processing.py  update_chapter4_modeling.py  update_visualizations.py
src/: evaluate.py  missing_generator.py  missing_patterns.py  processing.py  utils.py
tests/: create_explore.py  eda.ipynb  explore.ipynb  explore.md  test.ipynb  test.py  test_missing_patterns.py  tmp.py
(+161 files in other folders)
